# repo-pilot

./: .gitignore  CLAUDE.md  Containerfile  README.md  install.sh  pyproject.toml  run.sh
src/repo_pilot/: __init__.py  agent.py  cli.py  detector.py  indexer.py  local_retriever.py  prompts.py  retriever.py  scanner.py
src/repo_pilot/profiles/: __init__.py  base.py
