[project]
name = "repo-pilot"
version = "0.1.0"
description = "AI-powered repo assistant that knows how to install, run, and build any project"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Sally O'Malley", email = "somalley@redhat.com" },
]
keywords = ["rag", "cli", "developer-tools", "ai-assistant", "repository"]

dependencies = [
    "typer>=0.15.0",
    "rich>=14.0.0",
    "httpx>=0.28.0",
    "structlog>=25.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "gitpython>=3.1.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
rag = [
    "docs2db",
    "docs2db-api",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[project.scripts]
repo-pilot = "repo_pilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_pilot"]

[tool.ruff]
line-length = 100
target-version = "py312"
